--- a/MILESTONE-01/MODULE-01/Portfolio Website/styles/styles.css
+++ b/MILESTONE-01/MODULE-01/Portfolio Website/styles/styles.css
@@ -98,6 +98,7 @@ main {
 	padding: 130px;
 	border: 4px solid blue;
 	margin: 130px auto;
+	background-color: wheat;
 }
 
 .about .about-title {
@@ -116,4 +117,27 @@ main {
 	text-align: center;
 	border: 3px solid blue;
 	font-size: 18px;
+}
+.about .about-info-container {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+
+.what-i-do-section-title {
+	text-align: center;
+}
+.what-i-do-paragraph {
+	padding: 30px 150px;
+}
+
+/* Skills Realted Styles */
+.skills-container {
+	display: flex;
+
+	justify-content: space-around;
+	align-items: center;
+}
+.skills-container .skills {
+	padding: 30px;
 }
