--- a/A_MILESTONE-01/Module-04/blog.css
+++ b/A_MILESTONE-01/Module-04/blog.css
@@ -3,8 +3,12 @@
 	margin: 0;
 }
 
-nav > ul > li {
-	display: inline;
+nav > ul {
+	display: flex;
+}
+
+nav li:hover {
+	background-color: green;
 }
 
 nav > li > a {
@@ -13,4 +17,16 @@ nav > li > a {
 
 footer {
 	text-align: center;
+}
+/* nested menu */
+
+nav li .dropdown {
+	display: none;
+	position: absolute;
+	background-color: lightyellow;
+	padding-left: 10px;
+}
+
+nav li:hover > .dropdown {
+	display: block;
 }
