--- a/A_MILESTONE-01/Module-06(Portfolio Website)/styles.css
+++ b/A_MILESTONE-01/Module-06(Portfolio Website)/styles.css
@@ -1,3 +1,5 @@
+/* shared styles */
+
 * {
 	margin: 0;
 	padding: 0;
@@ -12,15 +14,150 @@
 }
 /* shared styles */
 
+.secondary-bg {
+	background-color: #fff8f3;
+}
 .text-primary {
 	color: orange;
 }
-/* nav styles */
+.dark-2 {
+	color: #474747;
+}
 
+.primary-button {
+	background-color: #fd6e0a;
+	font-weight: bold;
+	color: wheat;
+	padding: 18px 35px;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	-ms-border-radius: 5px;
+	-o-border-radius: 5px;
+	border: none;
+}
+.section-title {
+	font-size: 35px;
+	font-weight: bold;
+}
+
+.section-description {
+	font-size: 18px;
+	color: #757575;
+}
+.text-center {
+	text-align: center;
+}
+
+/* start of nav styles */
+.header {
+	background-image: url(./images/developer.png), url(./images/header_bg.png);
+	background-repeat: no-repeat;
+	background-position: top left, bottom right;
+}
 nav {
 	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin: 50px 20px;
 }
 .nav-title {
 	font-weight: 700;
 	font-size: 45px;
+}
+nav ul {
+	display: flex;
+	align-items: center;
+	/* border: 2px solid red; */
+}
+nav ul li {
+	list-style: none;
+	margin: 50px 20px;
+}
+
+nav li a {
+	text-decoration: none;
+	font-size: 20px;
+}
+/* end  of nav styles */
+/* banner styles */
+.banner {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin: 0 35px 0 230px;
+}
+.banner-content {
+	max-width: 580px;
+}
+.banner-title {
+	font-weight: 700;
+	font-size: 85px;
+}
+.banner-sub-title {
+	font-weight: 600;
+	font-size: 45px;
+	margin-bottom: 20px;
+	margin-left: 20px;
+}
+.banner-description {
+	color: #757575;
+	font-size: 18px;
+	margin-bottom: 30px;
+}
+
+.banner-greetings {
+	font-size: 45px;
+	font-weight: 600;
+}
+.banner-title {
+	font-weight: bold;
+}
+.banner-profile-pic {
+	width: 580px;
+}
+/* end  of banner styles */
+
+main {
+	max-width: 1140px;
+	margin: 0 auto;
+}
+main section {
+	margin-top: 130px;
+	margin-bottom: 30px;
+}
+/* about styles */
+
+.about {
+	border-radius: 10px;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	-ms-border-radius: 10px;
+	-o-border-radius: 10px;
+	text-align: center;
+	margin-top: 130px;
+}
+
+.about-items {
+	display: flex;
+	justify-content: space-around;
+}
+
+.item-description {
+	font-weight: 600;
+}
+
+.skills-container {
+	display: flex;
+
+	gap: 24px;
+}
+.skill {
+	padding: 30px;
+	border-radius: 5px;
+	box-shadow: 0px 6px 50px 0px black;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	-ms-border-radius: 5px;
+	-o-border-radius: 5px;
 }
